fixed and edited UI

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <link rel="icon" type="image/x-icon" href="/src/assets/logo/logo.png">
   <style>
-    @media print {
+    /* @media print {
       @page {
         margin: 0;
         size: auto;
@@ -17,7 +17,7 @@
       body {
         margin-inline: 1cm;
       }
-    }
+    } */
   </style>
 </head>
 
