fixed major bugs

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         margin-inline: 1cm;
       }
     } */
+    @font-face {
+      font-family: 'Preeti';
+      src: local('Preeti');
+    }
+
+    @font-face {
+      font-family: 'Kalimati';
+      src: local('Kalimati');
+    }
   </style>
 </head>
 
