--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
       }
     } */
     @font-face {
-      font-family: 'Preeti';
-      src: local('Preeti');
+      font-family: 'Kalimati';
+      src: url('/fonts/Kalimati.ttf') format('truetype');
+      font-weight: normal;
+      font-style: normal;
     }
 
-    @font-face {
-      font-family: 'Kalimati';
-      src: local('Kalimati');
+    .kalimati-input {
+      font-family: 'Kalimati', sans-serif;
+      font-size: 20px;
     }
   </style>
 </head>
